--- a/Temporal Difference/Homework_5.ipynb
+++ b/Temporal Difference/Homework_5.ipynb
@@ -9,8 +9,7 @@
    },
    "source": [
     "<center>\n",
-    "    \n",
-    "    COMP4240/5435 - Reinforcement Learning\n",
+    "Reinforcement Learning\n",
     "    \n",
     "# Homework 5 - Temporal Difference\n",
     "\n",
