--- a/Eligibility Traces and TD_lamdba/Homework_7.ipynb
+++ b/Eligibility Traces and TD_lamdba/Homework_7.ipynb
@@ -9,9 +9,8 @@
    },
    "source": [
     "<center>\n",
-    "    \n",
-    "    COMP4240/5435 - Reinforcement Learning\n",
-    "    \n",
+    " Reinforcement Learning\n",
+    "     \n",
     "# Homework 7 - Eligibility Traces and TD($\\lambda$)\n",
     "\n",
     "</center>"
@@ -309,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -323,7 +322,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9db33ea9fa7b2c650cb0566c85cffe253d425b7cca18759b45c6b5f450d97eb4"
+   }
   }
  },
  "nbformat": 4,
