--- a/Finite MDP and Bellman Equations/Homework_2.ipynb
+++ b/Finite MDP and Bellman Equations/Homework_2.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "<center>\n",
-    "    COMP4240/5435 - Reinforcement Learning\n",
+    "Reinforcement Learning\n",
     "\n",
     "# Homework 2 - Finite MDPs and Bellman Equations\n",
     "\n",
@@ -161,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -175,7 +175,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9db33ea9fa7b2c650cb0566c85cffe253d425b7cca18759b45c6b5f450d97eb4"
+   }
   }
  },
  "nbformat": 4,
