--- a/multi_arm_bandit_problems/homework1.ipynb
+++ b/multi_arm_bandit_problems/homework1.ipynb
@@ -10,8 +10,7 @@
    },
    "source": [
     "<center>\n",
-    "    \n",
-    "    COMP4240/5435 - Reinforcement Learning\n",
+    "Reinforcement Learning\n",
     "    \n",
     "# Homework 1 - K-armed Bandit Algorithms\n",
     "    \n",
@@ -538,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -552,7 +551,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9db33ea9fa7b2c650cb0566c85cffe253d425b7cca18759b45c6b5f450d97eb4"
+   }
   }
  },
  "nbformat": 4,
