--- a/Eligibility Traces and TD_lamdba/Practice_7.ipynb
+++ b/Eligibility Traces and TD_lamdba/Practice_7.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -11,7 +12,7 @@
     "<center>\n",
     " Reinforcement Learning\n",
     "     \n",
-    "# Homework 7 - Eligibility Traces and TD($\\lambda$)\n",
+    "# Practice 7 - Eligibility Traces and TD($\\lambda$)\n",
     "\n",
     "</center>"
    ]
