--- a/Temporal Difference/Practice_5.ipynb
+++ b/Temporal Difference/Practice_5.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -11,7 +12,7 @@
     "<center>\n",
     "Reinforcement Learning\n",
     "    \n",
-    "# Homework 5 - Temporal Difference\n",
+    "# Practice 5 - Temporal Difference\n",
     "\n",
     "    \n",
     "</center>"
