--- a/multi_arm_bandit_problems/Practice_1.ipynb
+++ b/multi_arm_bandit_problems/Practice_1.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "167b9b64-a506-44b8-a005-0a058c666de0",
    "metadata": {
@@ -12,7 +13,7 @@
     "<center>\n",
     "Reinforcement Learning\n",
     "    \n",
-    "# Homework 1 - K-armed Bandit Algorithms\n",
+    "# Practice 1 - K-armed Bandit Algorithms\n",
     "    \n",
     "</center>"
    ]
@@ -88,6 +89,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a074543-db75-46ad-a4b0-d7c4b3124258",
    "metadata": {
@@ -96,7 +98,7 @@
     }
    },
    "source": [
-    "### Part 1 - Bandit Class [20 pts]\n",
+    "### Part 1 - Bandit Class\n",
     "(a) Implement a bandit class, by completing the following code. This class should at least have two functions, one for returning the number of arms, and the other for pulling a given arm and returning a reward. "
    ]
   },
@@ -179,6 +181,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ed60c8f4-8778-489d-bc16-f1c44b1d1dd0",
    "metadata": {
@@ -187,7 +190,7 @@
     }
    },
    "source": [
-    "### Part 2 - Policy Class [40 pts]\n",
+    "### Part 2 - Policy Class\n",
     "\n",
     "(a) Make a *random* policy class that selects arms randomly using the following template. Your class should have: (i) a reset function for resetting the estimations, $Q$ and the number of times each arm was selected $N$, (ii) a function for selecting an arm using the current estimate $Q$, (iii) and a function that updates the estimate $Q$ according to the incremental averaging method. "
    ]
@@ -411,6 +414,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6e233645-b4d7-44ce-88d8-5873c0f91b20",
    "metadata": {
@@ -419,7 +423,7 @@
     }
    },
    "source": [
-    "### Part 3 - Testbed [40]\n",
+    "### Part 3 - Testbed\n",
     "\n",
     "(a) build a testbed by generating 500 randomly selected 7-armed bandits. For each bandit problem, select the true arm value ($Q^*$) from a Gaussian distribution with mean 0.0 and variance 1.0. For each selected action $a$, the bandit should return an actual reward from a Gaussian distribution with mean $Q^*(a)$ and variance 1.0. Our goal is to evaluate the three policies that we developed by averaging their performance over the 500 bandit problems. In other words, using each policy, we play each generated 7-armed bandit for 1000 steps. Then for each policy, we average the results over the 500 generated 7-armed bandits.\n",
     "\n",
@@ -551,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
