--- a/Dynamic Programming/Practice_3.ipynb
+++ b/Dynamic Programming/Practice_3.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -11,7 +12,7 @@
     "<center>\n",
     "Reinforcement Learning\n",
     "\n",
-    "# Homework 3 - Dynamic Programming\n",
+    "# Practice 3 - Dynamic Programming\n",
     "\n",
     "    \n",
     "</center>"
@@ -212,6 +213,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -219,7 +221,7 @@
     }
    },
    "source": [
-    "## Part II (*)\n",
+    "## Part II\n",
     "A gambler has the opportunity to make bets on the outcomes of a sequence of coin flips. If the coin comes up heads, he wins as many dollars as he has staked on that flip; if it is tails, he loses his stake. The game ends when the gambler wins by reaching his goal of \\$100, or loses by running out of money.\n",
     "\n",
     "On each flip, the gambler must decide what portion of his capital to stake, in integer numbers of dollars. This problem can be formulated as an **undiscounted** ($\\gamma=1$), **episodic**, finite MDP.\n",
@@ -412,6 +414,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -419,7 +422,7 @@
     }
    },
    "source": [
-    "## Part III (extra credit)\n",
+    "## Part III\n",
     "Test the algorithm by decreasing $\\theta$ the threshold for accuracy of value function estimation. What happens when $\\theta \\rightarrow 0$? \n",
     "Add any helpful code/graphs if you have."
    ]
