--- a/Finite MDP and Bellman Equations/Practice_2.ipynb
+++ b/Finite MDP and Bellman Equations/Practice_2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -11,7 +12,7 @@
     "<center>\n",
     "Reinforcement Learning\n",
     "\n",
-    "# Homework 2 - Finite MDPs and Bellman Equations\n",
+    "# Practice 2 - Finite MDPs and Bellman Equations\n",
     "\n",
     "    \n",
     "</center>"
@@ -175,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
