--- a/On-policy Control with Approximation/Practice_6.ipynb
+++ b/On-policy Control with Approximation/Practice_6.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -11,7 +12,7 @@
     "<center>\n",
     "Reinforcement Learning\n",
     "    \n",
-    "# Homework 6 - On-policy Control with Approximation\n",
+    "# Practice 6 - On-policy Control with Approximation\n",
     "\n",
     "    \n",
     "</center>"
@@ -123,6 +124,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -130,7 +132,7 @@
     }
    },
    "source": [
-    "## Part I (4 points)\n",
+    "## Part I\n",
     "\n",
     "Check and confirm that the given Mountain Car simulation works as expected. Make sure you can observe and log (if needed) all the observations, actions, rewards, and termination conditions. You can animate the simulation by adding `render_mode='human'` when calling the `gym.make` class.  \n"
    ]
@@ -159,6 +161,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -166,8 +169,7 @@
     }
    },
    "source": [
-    "## Part II (6 points)\n",
-    "\n",
+    "## Part II\n",
     "In this part, you will practice writing code for approximating the state value function. \n",
     "\n",
     "(a) write a function that generates Fourier basis features for a problem with one continuous state (1D state). The output of this function should be a vector of Fourier basis functions,\n",
@@ -221,6 +223,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -228,7 +231,7 @@
     }
    },
    "source": [
-    "## Part III (40 points)\n",
+    "## Part III \n",
     "\n",
     "Implement the **Episodic Semi-gradient SARSA** (pp. 244)."
    ]
@@ -338,6 +341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -345,7 +349,7 @@
     }
    },
    "source": [
-    "## Part IV (50 points) \n",
+    "## Part IV\n",
     "\n",
     "(a) Use the algorithm to learn the Mountain Car task. Tune the step-size parameter ($\\alpha$), select a proper Function Approximation order, discount factor ($\\gamma$), exploration probability ($\\varepsilon$). \n",
     "\n",
@@ -429,6 +433,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -436,7 +441,7 @@
     }
    },
    "source": [
-    "## Part V (Extra Points)\n",
+    "## Part V\n",
     "\n",
     "(a) Implement the **Episodic Semi-gradient $n$-step SARSA** (pp. 247)."
    ]
@@ -626,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
